# django-sveltekit-template

./: LICENSE  README.md  cookiecutter.json
{{ cookiecutter.project_slug }}/: README.md  Vagrantfile  compose.yml  main.yml  playbook.yml
{{ cookiecutter.project_slug }}/backend/: Dockerfile  Pipfile  manage.py  pyproject.toml  requirements.txt
{{ cookiecutter.project_slug }}/backend/api/: models.py  permissions.py  urls.py  views.py
{{ cookiecutter.project_slug }}/backend/api/migrations/: 0001_initial.py
{{ cookiecutter.project_slug }}/backend/auth/: models.py  urls.py
{{ cookiecutter.project_slug }}/backend/core/: admin.py  models.py  urls.py
{{ cookiecutter.project_slug }}/backend/user/: views.py
{{ cookiecutter.project_slug }}/backend/user/migrations/: 0001_initial.py
{{ cookiecutter.project_slug }}/backend/{{ cookiecutter.project_slug }}/: asgi.py  settings.py  urls.py  wsgi.py
{{ cookiecutter.project_slug }}/frontend/: package-lock.json  package.json  svelte.config.js  tailwind.config.js  vite.config.ts
{{ cookiecutter.project_slug }}/nginx/: Dockerfile  nginx.conf
{{ cookiecutter.project_slug }}/roles/conf/defaults/: main.yml
{{ cookiecutter.project_slug }}/roles/conf/tasks/: main.yml
{{ cookiecutter.project_slug }}/roles/conf/templates/: 90-security.conf.j2
{{ cookiecutter.project_slug }}/roles/project/defaults/: main.yml
{{ cookiecutter.project_slug }}/roles/project/tasks/: main.yml
