[tool.poetry]
name = "{{ cookiecutter.project_slug }}"
version = "0.1.0"
description = ""
authors = ["{{ cookiecutter.author }}"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
asgiref = "^3.7.2"
django = "^4.2.7"
sqlparse = "^0.4.4"
djangorestframework = "^3.14.0"
markdown = "^3.5.1"
django-filter = "^23.4"
python-dotenv = "^1.0.0"
djoser = "^2.2.2"
djangorestframework-simplejwt = "^5.3.0"
django-cors-headers = "^4.3.1"
drf-spectacular = "^0.26.5"
gunicorn = "^21.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
